--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
     <ImageView
         android:layout_marginTop="60sp"
-        android:background="@drawable/nuannuan"
+        android:background="@drawable/timg"
         android:layout_gravity="center"
         android:layout_width="120dp"
         android:layout_height="80dp" />
